<resources>
    <string name="app_name">Rich Friends Worldwide</string>
    <string name="Log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="Terms_condt">Terms and Conditions</string>
    <string name="about">About us</string>
    <string name="place_holder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="home_page">Home</string>
    <string name="rich_friend">MY PROFILE</string>
    <string name="night_Clubs">RICH FRIEND MIXERS</string>
    <string name="get_around">ABOUT</string>
    <string name="hotel_stay">RICH FRIENDS WORLDWIDE</string>
    <string name="location">- Club on the strip for 2</string>
    <string name="nightstay">- 1 night at hotel on the strip</string>
    <string name="transpo">- Limo ride to and from club to hotel</string>
    <string name="club">Night Club on the strip</string>
    <string name="hoteldeal">2 Night Stay</string>
    <string name="hoteldeal2">3 Night Stay</string>
    <string name="clubdeal1">Mixer 10/12</string>
    <string name="clubdeal2">Mixer 10/20</string>
    <string name="nightpack">Upcoming Events</string>
    <string name="transpdeal1">Limo Club Hop</string>
    <string name="transpdeal2">Strip limo ride</string>
    <string name="transpdeal3">Party Bus</string>
    <string name="Profile">My Profile </string>
    <string name="richfriendinfo">Yo RichFriend</string>
    <string name="business">Clothing</string>
    <string name="richfriendmember">Membership level: Rich Friend</string>
    <string name="richfriendmember2">Membership Level: Really Rich Friend</string>
    <string name="richfriendmember3">Membership Level: Filthy Rich Friend</string>
    <string name="status">Rich Friend Membership</string>
    <string name="proceed">Proceed to Home</string>
    <string name="confirmed100">Registration Confirmed</string>
    <string name="mixersetup"> TO SET UP A MIXER IN YOUR CITY TODAY JOIN NOW!</string>
    <string name="twelvethmixer">10/12s Mixer Event</string>
    <string name="twenthmixer">10/20s Mixer Event</string>
    <string name="event1">Free Business Mixer event, Food and Drinks will be available for more info call 702.123.4567 or RSVP at yorichfriend.com/invite</string>
    <string name="on_line">Whos Online</string>
    <string name="member">Member:</string>
</resources>
