<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:background="#000000">

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/richfriendlogo"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Terms_condt"
        android:textColor="@color/colorOfText"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_holder"
        android:textColor="@color/colorOfText"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />


</LinearLayout>