<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#000000"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/richfriendpngconnectedr"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorOfText"
            android:textSize="40sp"
            android:text="@string/night_Clubs"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="70dp"
            android:text="@string/twelvethmixer"
            android:textColor="@color/colorOfText"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"

            />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:id="@+id/specialtext3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/clubdeal1"
                android:textColor="@color/darkColorText"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/specialad3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/richfriendpngmaster" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorOfText"
            android:text="@string/event1"
            android:textAlignment="center"
            android:layout_marginBottom="40dp"
            android:padding="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/colorOfText"
            android:text="@string/mixersetup"
            android:textAlignment="center"
            android:layout_marginBottom="40dp"
            android:padding="16dp"
            />



    </LinearLayout>

</ScrollView>