<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Log_in"
        android:layout_gravity="center"
        android:layout_marginTop="125dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/richfriendgold"

        />

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/sign_up"
        android:id="@+id/signinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@color/richfriendgold"
        />

    <TextView
        android:id="@+id/TConditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Terms_condt"
        android:textColor="@color/colorOfText"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/richfriendlogo"
        android:layout_gravity="center"
        />
</LinearLayout>
