<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    android:background="#000000">

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/richfriendpngconnectedr"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hotel_stay"
        android:textColor="@color/colorOfText"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20dp"/>

    <ImageView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/globe"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_holder"
        android:textColor="@color/colorOfText"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:id="@+id/cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/richfriendgold"
        android:text="Continue"
        android:textSize="40sp"
        android:textColor="@color/darkColorText"
        android:layout_gravity="center"
        android:padding="10dp"
        />


</LinearLayout>